<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:context=".MainActivity">

        <Spinner
            android:id="@+id/handedness"
            android:tag="@string/handedness"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="90dp"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Spinner
            android:id="@+id/usedHand"
            android:tag="@string/usedHand"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="90dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <Spinner
            android:id="@+id/biologicalGender"
            android:tag="@string/biologicalGender"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="90dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <Spinner
            android:id="@+id/Surface"
            android:tag="@string/Surface"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="90dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView4" />

        <Spinner
            android:id="@+id/ScreenProtector"
            android:tag="@string/ScreenProtector"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="90dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

        <Spinner
            android:id="@+id/PhoneCase"
            android:tag="@string/PhoneCase"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="90dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6" />

        <Spinner
            android:id="@+id/Environment"
            android:tag="@string/Environment"
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="90dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView7" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/handedness"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/usedHand"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/handedness"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/biologicalGender"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/usedHand"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/Surface"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/biologicalGender"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/ScreenProtector"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/Surface"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/PhoneCase"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ScreenProtector"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/Environment"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/PhoneCase"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Continue"
            android:onClick="enterPinInput"
            app:layout_constraintTop_toBottomOf="@id/Environment"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
